--- a/package.json
+++ b/package.json
@@ -13,8 +13,8 @@
   },
   "scripts": {
     "start": "node index.js",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "node test-conf.js"
   },
-  "author": "",
+  "author": "liu xing",
   "license": "MIT"
 }
