--- a/package.json
+++ b/package.json
@@ -15,6 +15,9 @@
     "start": "node index.js",
     "test": "node test-conf.js"
   },
+  "engines": {
+    "node": ">=10.10.0"
+  },
   "author": "liu xing",
   "license": "MIT"
 }
